tests/error/misc_errors/span_indented.err
Error: Type mismatch (at $FILE:11:15)
   | 
 9 |     @guppy(module)
10 |     def foo(x: float) -> int:
11 |         return x
   |                ^ Expected return value of type `int`, got `float`

Guppy compilation failed due to 1 previous error
